<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/itemCv"
    card_view:cardElevation="0dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/Silver">

        <TextView
            android:id="@+id/symbolTv"
            android:layout_width="0dp"
            android:layout_height="@dimen/stock_list_item_height"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/symbol"
            android:textSize="@dimen/stock_list_item_title_text_size">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/stock_list_item_height"
            android:layout_weight="1"
            android:id="@+id/priceTv"
            android:gravity="center"
            android:text="@string/price"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/stock_list_item_title_text_size">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/stock_list_item_height"
            android:layout_weight="1"
            android:id="@+id/differenceTv"
            android:gravity="center"
            android:text="@string/difference"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/stock_list_item_title_text_size">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/stock_list_item_height"
            android:layout_weight="1"
            android:id="@+id/volumeTv"
            android:text="@string/volume"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/stock_list_item_title_text_size">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/stock_list_item_height"
            android:layout_weight="1"
            android:id="@+id/buyingTv"
            android:gravity="center"
            android:text="@string/buying"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/stock_list_item_title_text_size">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/stock_list_item_height"
            android:layout_weight="1"
            android:id="@+id/salesTv"
            android:gravity="center"
            android:text="@string/sale"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/stock_list_item_title_text_size">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/stock_list_item_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/change"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="@dimen/stock_list_item_title_text_size">

        </TextView>

    </LinearLayout>



</androidx.cardview.widget.CardView>